--- a/VKapp/VK/XIB cells/NewsTableViewCell.xib
+++ b/VKapp/VK/XIB cells/NewsTableViewCell.xib
@@ -39,7 +39,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hnd-1k-5Jn">
-                        <rect key="frame" x="5" y="292.5" width="30" height="30"/>
+                        <rect key="frame" x="5" y="293" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="66r-I8-VYa"/>
                             <constraint firstAttribute="width" constant="30" id="Qya-6V-2zt"/>
@@ -47,7 +47,7 @@
                         <state key="normal" title="Button" image="like icon"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4zl-qb-5y8">
-                        <rect key="frame" x="73" y="292.5" width="30" height="30"/>
+                        <rect key="frame" x="73" y="293" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="0Dq-w1-1d2"/>
                             <constraint firstAttribute="height" constant="30" id="kOI-8q-QW3"/>
@@ -55,7 +55,7 @@
                         <state key="normal" title="Button" image="comment icon"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9BP-oM-7ll">
-                        <rect key="frame" x="141.5" y="292.5" width="30" height="30"/>
+                        <rect key="frame" x="142" y="293" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="UIG-Of-pIY"/>
                             <constraint firstAttribute="height" constant="30" id="wbc-cD-wV3"/>
@@ -63,27 +63,21 @@
                         <state key="normal" title="Button" image="loud-speaker icon"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="liX-cx-dFx">
-                        <rect key="frame" x="40" y="292.5" width="13" height="30"/>
+                        <rect key="frame" x="40" y="293" width="13" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LZy-9J-gGa">
-                        <rect key="frame" x="108" y="292.5" width="13.5" height="30"/>
+                        <rect key="frame" x="108" y="293" width="14" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uws-gQ-YXv">
-                        <rect key="frame" x="176.5" y="292.5" width="10.5" height="30"/>
+                        <rect key="frame" x="177" y="293" width="11" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WDu-c0-4mt">
-                        <rect key="frame" x="3" y="66" width="384" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wxb-Zc-jtb">
@@ -95,31 +89,40 @@
                         <state key="normal" title="Button" image="three points for news icon"/>
                     </button>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Wk7-iJ-ERe">
-                        <rect key="frame" x="3" y="89.5" width="389" height="200.5"/>
+                        <rect key="frame" x="3" y="95" width="389" height="195"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="195" id="FiV-Nh-HqA"/>
+                        </constraints>
                     </imageView>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="Lorem ipsum dolor sit er" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5tH-7f-3FT">
+                        <rect key="frame" x="3" y="65" width="389" height="35.5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    </textView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="uws-gQ-YXv" firstAttribute="bottom" secondItem="9BP-oM-7ll" secondAttribute="bottom" id="2Qx-iO-BvE"/>
                     <constraint firstItem="4zl-qb-5y8" firstAttribute="leading" secondItem="liX-cx-dFx" secondAttribute="trailing" constant="20" id="71R-kL-vjv"/>
+                    <constraint firstItem="Wk7-iJ-ERe" firstAttribute="top" secondItem="5tH-7f-3FT" secondAttribute="bottom" priority="750" constant="2" id="7aC-gm-1j8"/>
                     <constraint firstItem="cuK-O1-ley" firstAttribute="leading" secondItem="YrC-7P-oG0" secondAttribute="leading" id="8oV-jF-vg2"/>
-                    <constraint firstItem="Wk7-iJ-ERe" firstAttribute="leading" secondItem="WDu-c0-4mt" secondAttribute="leading" id="ARw-AM-HP7"/>
-                    <constraint firstItem="WDu-c0-4mt" firstAttribute="top" secondItem="lf6-to-o1A" secondAttribute="bottom" constant="3" id="CKl-aX-rh1"/>
+                    <constraint firstItem="5tH-7f-3FT" firstAttribute="trailing" secondItem="Wk7-iJ-ERe" secondAttribute="trailing" id="9yz-pd-R9v"/>
                     <constraint firstItem="LZy-9J-gGa" firstAttribute="top" secondItem="4zl-qb-5y8" secondAttribute="top" id="CVP-mT-a37"/>
                     <constraint firstAttribute="bottom" secondItem="Hnd-1k-5Jn" secondAttribute="bottom" constant="3" id="FAK-xI-1Uh"/>
                     <constraint firstItem="uws-gQ-YXv" firstAttribute="top" secondItem="9BP-oM-7ll" secondAttribute="top" id="FZR-qy-Ejz"/>
-                    <constraint firstItem="WDu-c0-4mt" firstAttribute="leading" secondItem="lf6-to-o1A" secondAttribute="leading" id="QDE-ej-7uH"/>
                     <constraint firstItem="9BP-oM-7ll" firstAttribute="leading" secondItem="LZy-9J-gGa" secondAttribute="trailing" constant="20" id="R8q-EH-adF"/>
                     <constraint firstItem="LZy-9J-gGa" firstAttribute="bottom" secondItem="4zl-qb-5y8" secondAttribute="bottom" id="Ukn-oT-9Xg"/>
                     <constraint firstAttribute="trailing" secondItem="Wk7-iJ-ERe" secondAttribute="trailing" constant="3" id="WB7-zg-tVJ"/>
-                    <constraint firstItem="WDu-c0-4mt" firstAttribute="trailing" secondItem="YrC-7P-oG0" secondAttribute="trailing" id="WGd-rW-VGn"/>
                     <constraint firstItem="Hnd-1k-5Jn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="Xln-dv-u2x"/>
                     <constraint firstItem="lf6-to-o1A" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="3" id="ZaO-z2-HmU"/>
                     <constraint firstItem="4zl-qb-5y8" firstAttribute="top" secondItem="liX-cx-dFx" secondAttribute="top" id="aC2-Wl-ZK8"/>
                     <constraint firstItem="liX-cx-dFx" firstAttribute="top" secondItem="Hnd-1k-5Jn" secondAttribute="top" id="aDA-cV-Vlk"/>
                     <constraint firstItem="liX-cx-dFx" firstAttribute="bottom" secondItem="Hnd-1k-5Jn" secondAttribute="bottom" id="anp-XF-60f"/>
                     <constraint firstItem="9BP-oM-7ll" firstAttribute="bottom" secondItem="LZy-9J-gGa" secondAttribute="bottom" id="asr-ZV-vyl"/>
+                    <constraint firstItem="5tH-7f-3FT" firstAttribute="leading" secondItem="lf6-to-o1A" secondAttribute="leading" id="b6A-jg-4Er"/>
                     <constraint firstItem="cuK-O1-ley" firstAttribute="trailing" secondItem="YrC-7P-oG0" secondAttribute="trailing" id="i6p-8h-Y6u"/>
                     <constraint firstItem="uws-gQ-YXv" firstAttribute="leading" secondItem="9BP-oM-7ll" secondAttribute="trailing" constant="5" id="m30-l4-GdU"/>
+                    <constraint firstItem="Wk7-iJ-ERe" firstAttribute="top" secondItem="lf6-to-o1A" secondAttribute="bottom" priority="250" constant="2" id="mF7-5A-1RS"/>
                     <constraint firstAttribute="trailingMargin" secondItem="YrC-7P-oG0" secondAttribute="trailing" id="n15-RL-DXN"/>
                     <constraint firstItem="YrC-7P-oG0" firstAttribute="leading" secondItem="lf6-to-o1A" secondAttribute="trailing" constant="3" id="nkh-ta-iJy"/>
                     <constraint firstItem="4zl-qb-5y8" firstAttribute="bottom" secondItem="liX-cx-dFx" secondAttribute="bottom" id="nvM-OM-kfH"/>
@@ -128,18 +131,23 @@
                     <constraint firstItem="cuK-O1-ley" firstAttribute="top" secondItem="YrC-7P-oG0" secondAttribute="bottom" constant="2" id="qG6-Uh-pDA"/>
                     <constraint firstItem="liX-cx-dFx" firstAttribute="leading" secondItem="Hnd-1k-5Jn" secondAttribute="trailing" constant="5" id="qaR-UZ-bYM"/>
                     <constraint firstItem="YrC-7P-oG0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="r4v-Ma-RB9"/>
+                    <constraint firstItem="5tH-7f-3FT" firstAttribute="top" secondItem="lf6-to-o1A" secondAttribute="bottom" constant="2" id="sci-6D-2Lm"/>
+                    <constraint firstItem="Wk7-iJ-ERe" firstAttribute="leading" secondItem="5tH-7f-3FT" secondAttribute="leading" id="tTG-y7-Ayl"/>
                     <constraint firstItem="lf6-to-o1A" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="3" id="wVx-uW-xvh"/>
                     <constraint firstAttribute="trailing" secondItem="wxb-Zc-jtb" secondAttribute="trailing" constant="10" id="wps-ch-c8N"/>
+                    <constraint firstItem="Hnd-1k-5Jn" firstAttribute="top" secondItem="5tH-7f-3FT" secondAttribute="bottom" priority="250" constant="2" id="x8J-qn-KCt"/>
                     <constraint firstItem="LZy-9J-gGa" firstAttribute="leading" secondItem="4zl-qb-5y8" secondAttribute="trailing" constant="5" id="y9U-bT-iyG"/>
                     <constraint firstItem="wxb-Zc-jtb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="yfa-g4-e5g"/>
-                    <constraint firstItem="Wk7-iJ-ERe" firstAttribute="top" secondItem="WDu-c0-4mt" secondAttribute="bottom" constant="3" id="zOt-PL-SIV"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="countOfLikes" destination="liX-cx-dFx" id="Rai-Tu-AFL"/>
                 <outlet property="likeButton" destination="Hnd-1k-5Jn" id="deb-lM-arj"/>
-                <outlet property="newsLabel" destination="WDu-c0-4mt" id="ab2-Tl-zr7"/>
                 <outlet property="newsPicture" destination="Wk7-iJ-ERe" id="vlw-8a-Qfh"/>
+                <outlet property="newsTextView" destination="5tH-7f-3FT" id="gGd-2x-9bS"/>
+                <outlet property="pictureToAvatarConstraint" destination="mF7-5A-1RS" id="flU-ww-41Z"/>
+                <outlet property="textToLikeConstraint" destination="x8J-qn-KCt" id="29S-L3-DMo"/>
+                <outlet property="textToPictureConstraint" destination="7aC-gm-1j8" id="cF0-3u-HBz"/>
                 <outlet property="usersAvatarImage" destination="lf6-to-o1A" id="1ai-wG-qZX"/>
                 <outlet property="usersName" destination="YrC-7P-oG0" id="Qst-Hc-aNV"/>
             </connections>
