--- a/VKapp/VK/XIB cells/GiftsTableViewCell.xib
+++ b/VKapp/VK/XIB cells/GiftsTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,14 +13,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="giftsCell" rowHeight="92" id="KGk-i7-Jjw" customClass="GiftsTableViewCell" customModule="VK" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="410" height="119"/>
+            <rect key="frame" x="0.0" y="0.0" width="698" height="119"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="372" height="118.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="665" height="118.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6y0-uD-byi">
-                        <rect key="frame" x="3" y="3" width="371" height="28"/>
+                        <rect key="frame" x="3" y="3" width="659" height="28"/>
                         <state key="normal">
                             <attributedString key="attributedTitle">
                                 <fragment content="4 подарка">
@@ -34,7 +34,7 @@
                         </state>
                     </button>
                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EYG-gy-uaF">
-                        <rect key="frame" x="0.0" y="34" width="377" height="85"/>
+                        <rect key="frame" x="0.0" y="34" width="665" height="85"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gift boy" translatesAutoresizingMaskIntoConstraints="NO" id="eff-Fa-GOc">
                                 <rect key="frame" x="0.0" y="0.0" width="85" height="85"/>
@@ -78,7 +78,7 @@
                                     <constraint firstAttribute="width" secondItem="CKl-nv-Igj" secondAttribute="height" multiplier="1:1" id="c3G-dY-88G"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gift dog" translatesAutoresizingMaskIntoConstraints="NO" id="S2l-hE-max">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gift baby" translatesAutoresizingMaskIntoConstraints="NO" id="S2l-hE-max">
                                 <rect key="frame" x="734" y="0.0" width="85" height="85"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="85" id="DNn-yD-5Yg"/>
@@ -135,7 +135,10 @@
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <point key="canvasLocation" x="145" y="96.5"/>
+            <connections>
+                <outlet property="giftsCountButton" destination="6y0-uD-byi" id="bQC-Sq-EJ5"/>
+            </connections>
+            <point key="canvasLocation" x="289" y="96.5"/>
         </tableViewCell>
     </objects>
     <resources>
