--- a/VKProfile/Cells/PresentTableViewCell.xib
+++ b/VKProfile/Cells/PresentTableViewCell.xib
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -26,67 +25,30 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H37-HH-kjl">
-                        <rect key="frame" x="8" y="31.5" width="304" height="88"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cw7-yH-mTd">
-                                <rect key="frame" x="155" y="9" width="70" height="70"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="cw7-yH-mTd" secondAttribute="height" multiplier="1:1" id="slg-wK-pr3"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mSB-yy-Jze">
-                                <rect key="frame" x="77.5" y="9" width="70" height="70"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="mSB-yy-Jze" secondAttribute="height" multiplier="1:1" id="GzR-H9-2W4"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Ih-1z-gXb">
-                                <rect key="frame" x="0.0" y="9" width="70" height="70"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="7Ih-1z-gXb" secondAttribute="height" multiplier="1:1" id="F5I-LG-5J0"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TDT-ot-9v3">
-                                <rect key="frame" x="233.5" y="9" width="70" height="70"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="TDT-ot-9v3" secondAttribute="height" multiplier="1:1" id="5gv-Dc-Dtx"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="mSB-yy-Jze" firstAttribute="top" secondItem="7Ih-1z-gXb" secondAttribute="top" id="3Xw-ME-P1f"/>
-                            <constraint firstItem="7Ih-1z-gXb" firstAttribute="centerY" secondItem="H37-HH-kjl" secondAttribute="centerY" id="Ag3-uV-CRR"/>
-                            <constraint firstItem="TDT-ot-9v3" firstAttribute="leading" secondItem="cw7-yH-mTd" secondAttribute="trailing" constant="8.5" id="FQM-Ty-DUR"/>
-                            <constraint firstItem="cw7-yH-mTd" firstAttribute="top" secondItem="mSB-yy-Jze" secondAttribute="top" id="KX7-h2-fJR"/>
-                            <constraint firstItem="mSB-yy-Jze" firstAttribute="bottom" secondItem="7Ih-1z-gXb" secondAttribute="bottom" id="TNa-gb-5EJ"/>
-                            <constraint firstItem="TDT-ot-9v3" firstAttribute="bottom" secondItem="cw7-yH-mTd" secondAttribute="bottom" id="TaD-Ss-Oob"/>
-                            <constraint firstItem="cw7-yH-mTd" firstAttribute="bottom" secondItem="mSB-yy-Jze" secondAttribute="bottom" id="WJe-9W-cPm"/>
-                            <constraint firstItem="7Ih-1z-gXb" firstAttribute="leading" secondItem="H37-HH-kjl" secondAttribute="leading" id="dc8-D5-eXY"/>
-                            <constraint firstAttribute="bottom" secondItem="7Ih-1z-gXb" secondAttribute="bottom" constant="9" id="hrI-gU-XAa"/>
-                            <constraint firstItem="TDT-ot-9v3" firstAttribute="top" secondItem="cw7-yH-mTd" secondAttribute="top" id="l2C-iq-xoA"/>
-                            <constraint firstItem="mSB-yy-Jze" firstAttribute="leading" secondItem="7Ih-1z-gXb" secondAttribute="trailing" constant="7.5" id="txX-M2-kca"/>
-                            <constraint firstAttribute="trailing" secondItem="TDT-ot-9v3" secondAttribute="trailing" id="vL1-qx-XYj"/>
-                            <constraint firstItem="cw7-yH-mTd" firstAttribute="leading" secondItem="mSB-yy-Jze" secondAttribute="trailing" constant="7.5" id="vgx-fW-G7C"/>
-                        </constraints>
-                    </view>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="g9g-ss-bAM">
+                        <rect key="frame" x="0.0" y="32" width="320" height="88"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Qd2-42-wvv">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                    </collectionView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="H37-HH-kjl" firstAttribute="top" secondItem="nvi-Zd-9jI" secondAttribute="bottom" constant="7.5" id="CtH-YD-gFX"/>
-                    <constraint firstAttribute="trailing" secondItem="H37-HH-kjl" secondAttribute="trailing" constant="8" id="DM1-YE-jyq"/>
                     <constraint firstItem="nvi-Zd-9jI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="ED1-MZ-HQE"/>
-                    <constraint firstItem="H37-HH-kjl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="dPm-GM-Gb4"/>
+                    <constraint firstAttribute="trailing" secondItem="g9g-ss-bAM" secondAttribute="trailing" id="Szv-sc-xsC"/>
+                    <constraint firstAttribute="bottom" secondItem="g9g-ss-bAM" secondAttribute="bottom" id="ThZ-CT-VzG"/>
+                    <constraint firstItem="g9g-ss-bAM" firstAttribute="top" secondItem="nvi-Zd-9jI" secondAttribute="bottom" constant="8" id="Y7s-HE-clR"/>
                     <constraint firstItem="nvi-Zd-9jI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="mma-xK-zof"/>
-                    <constraint firstAttribute="bottom" secondItem="H37-HH-kjl" secondAttribute="bottom" id="wvO-p3-taR"/>
+                    <constraint firstItem="g9g-ss-bAM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="x4W-8l-bT4"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="presentsCollectionView" destination="g9g-ss-bAM" id="DGy-GQ-xD3"/>
                 <outlet property="presentsCountLabel" destination="nvi-Zd-9jI" id="LAZ-qf-oQn"/>
-                <outletCollection property="presentsImageView" destination="cw7-yH-mTd" collectionClass="NSMutableArray" id="0x6-sY-Qto"/>
-                <outletCollection property="presentsImageView" destination="TDT-ot-9v3" collectionClass="NSMutableArray" id="png-BM-czQ"/>
-                <outletCollection property="presentsImageView" destination="mSB-yy-Jze" collectionClass="NSMutableArray" id="Csh-Oj-81S"/>
-                <outletCollection property="presentsImageView" destination="7Ih-1z-gXb" collectionClass="NSMutableArray" id="Q5g-eH-TMY"/>
             </connections>
             <point key="canvasLocation" x="25" y="156"/>
         </tableViewCell>
