--- a/VKapp/VK/XIB cells/GiftsTableViewCell.xib
+++ b/VKapp/VK/XIB cells/GiftsTableViewCell.xib
@@ -6,21 +6,20 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="giftsCell" rowHeight="92" id="KGk-i7-Jjw" customClass="GiftsTableViewCell" customModule="VK" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="698" height="119"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="giftsCell" rowHeight="120" id="KGk-i7-Jjw" customClass="GiftsTableViewCell" customModule="VK" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="597" height="149"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="665" height="118.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="564" height="148.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6y0-uD-byi">
-                        <rect key="frame" x="3" y="3" width="659" height="28"/>
+                        <rect key="frame" x="3" y="3" width="558" height="30"/>
                         <state key="normal">
                             <attributedString key="attributedTitle">
                                 <fragment content="4 подарка">
@@ -33,118 +32,33 @@
                             </attributedString>
                         </state>
                     </button>
-                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EYG-gy-uaF">
-                        <rect key="frame" x="0.0" y="34" width="665" height="85"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gift boy" translatesAutoresizingMaskIntoConstraints="NO" id="eff-Fa-GOc">
-                                <rect key="frame" x="0.0" y="0.0" width="85" height="85"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="eff-Fa-GOc" secondAttribute="height" multiplier="1:1" id="2mJ-qs-dhf"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gift baby" translatesAutoresizingMaskIntoConstraints="NO" id="Qj0-xI-pUn">
-                                <rect key="frame" x="85" y="0.0" width="85" height="85"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="Qj0-xI-pUn" secondAttribute="height" multiplier="1:1" id="vGv-hC-TzG"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gift cat" translatesAutoresizingMaskIntoConstraints="NO" id="3HM-Uf-pHc">
-                                <rect key="frame" x="170" y="0.0" width="85" height="85"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="3HM-Uf-pHc" secondAttribute="height" multiplier="1:1" id="qhD-Ip-XgC"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gift cat" translatesAutoresizingMaskIntoConstraints="NO" id="7fY-b7-cEv">
-                                <rect key="frame" x="255" y="0.0" width="85" height="85"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="7fY-b7-cEv" secondAttribute="height" multiplier="1:1" id="Rd2-3w-uwY"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gift cat" translatesAutoresizingMaskIntoConstraints="NO" id="r75-5Z-PsP">
-                                <rect key="frame" x="340" y="0.0" width="85" height="85"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="r75-5Z-PsP" secondAttribute="height" multiplier="1:1" id="CWN-DK-lLw"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gift dog" translatesAutoresizingMaskIntoConstraints="NO" id="XQN-8S-i9b">
-                                <rect key="frame" x="425" y="0.0" width="85" height="85"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="XQN-8S-i9b" secondAttribute="height" multiplier="1:1" id="rHw-Y1-rgi"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gift dog" translatesAutoresizingMaskIntoConstraints="NO" id="CKl-nv-Igj">
-                                <rect key="frame" x="510" y="0.0" width="85" height="85"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="CKl-nv-Igj" secondAttribute="height" multiplier="1:1" id="c3G-dY-88G"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gift baby" translatesAutoresizingMaskIntoConstraints="NO" id="S2l-hE-max">
-                                <rect key="frame" x="734" y="0.0" width="85" height="85"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="85" id="DNn-yD-5Yg"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="CKl-nv-Igj" firstAttribute="leading" secondItem="XQN-8S-i9b" secondAttribute="trailing" id="1vR-CR-gIv"/>
-                            <constraint firstAttribute="bottom" secondItem="r75-5Z-PsP" secondAttribute="bottom" id="2bW-u2-aG8"/>
-                            <constraint firstItem="eff-Fa-GOc" firstAttribute="top" secondItem="EYG-gy-uaF" secondAttribute="top" id="3Ox-xF-jz4"/>
-                            <constraint firstItem="3HM-Uf-pHc" firstAttribute="top" secondItem="EYG-gy-uaF" secondAttribute="top" id="EvT-PY-GK6"/>
-                            <constraint firstItem="r75-5Z-PsP" firstAttribute="top" secondItem="EYG-gy-uaF" secondAttribute="top" id="Fds-yE-d3r"/>
-                            <constraint firstItem="S2l-hE-max" firstAttribute="leading" secondItem="CKl-nv-Igj" secondAttribute="trailing" constant="139" id="G01-Lg-odZ"/>
-                            <constraint firstAttribute="trailing" secondItem="S2l-hE-max" secondAttribute="trailing" constant="-442" id="Ge8-Ra-WXv"/>
-                            <constraint firstAttribute="bottom" secondItem="XQN-8S-i9b" secondAttribute="bottom" id="KMX-sA-OSl"/>
-                            <constraint firstAttribute="bottom" secondItem="eff-Fa-GOc" secondAttribute="bottom" id="KeH-ZX-Wp2"/>
-                            <constraint firstAttribute="height" constant="85" id="M1q-h9-Wdn"/>
-                            <constraint firstItem="Qj0-xI-pUn" firstAttribute="leading" secondItem="eff-Fa-GOc" secondAttribute="trailing" id="OVn-nF-i0Q"/>
-                            <constraint firstItem="S2l-hE-max" firstAttribute="height" secondItem="EYG-gy-uaF" secondAttribute="height" id="PMg-wy-Vcl"/>
-                            <constraint firstAttribute="bottom" secondItem="Qj0-xI-pUn" secondAttribute="bottom" id="QOO-5a-dvA"/>
-                            <constraint firstItem="7fY-b7-cEv" firstAttribute="height" secondItem="EYG-gy-uaF" secondAttribute="height" id="Re7-er-Mdv"/>
-                            <constraint firstAttribute="bottom" secondItem="CKl-nv-Igj" secondAttribute="bottom" id="SbH-UV-Nz3"/>
-                            <constraint firstItem="eff-Fa-GOc" firstAttribute="height" secondItem="EYG-gy-uaF" secondAttribute="height" id="TQT-cC-Ufd"/>
-                            <constraint firstItem="S2l-hE-max" firstAttribute="top" secondItem="EYG-gy-uaF" secondAttribute="top" id="YGi-dy-zoA"/>
-                            <constraint firstItem="XQN-8S-i9b" firstAttribute="height" secondItem="EYG-gy-uaF" secondAttribute="height" id="YYG-KB-yVG"/>
-                            <constraint firstItem="r75-5Z-PsP" firstAttribute="height" secondItem="EYG-gy-uaF" secondAttribute="height" id="ZLl-cS-nck"/>
-                            <constraint firstItem="Qj0-xI-pUn" firstAttribute="height" secondItem="EYG-gy-uaF" secondAttribute="height" id="Zif-6w-37Z"/>
-                            <constraint firstItem="r75-5Z-PsP" firstAttribute="leading" secondItem="7fY-b7-cEv" secondAttribute="trailing" id="aRG-lg-FWq"/>
-                            <constraint firstItem="7fY-b7-cEv" firstAttribute="leading" secondItem="3HM-Uf-pHc" secondAttribute="trailing" id="brb-6u-FCs"/>
-                            <constraint firstItem="CKl-nv-Igj" firstAttribute="height" secondItem="EYG-gy-uaF" secondAttribute="height" id="fgd-V4-tsL"/>
-                            <constraint firstItem="XQN-8S-i9b" firstAttribute="leading" secondItem="r75-5Z-PsP" secondAttribute="trailing" id="fwo-a6-ulm"/>
-                            <constraint firstAttribute="bottom" secondItem="S2l-hE-max" secondAttribute="bottom" id="gG2-pv-YFO"/>
-                            <constraint firstAttribute="bottom" secondItem="7fY-b7-cEv" secondAttribute="bottom" id="hdO-i2-eCF"/>
-                            <constraint firstItem="XQN-8S-i9b" firstAttribute="top" secondItem="EYG-gy-uaF" secondAttribute="top" id="i03-Du-U74"/>
-                            <constraint firstAttribute="bottom" secondItem="3HM-Uf-pHc" secondAttribute="bottom" id="iSj-tb-qIZ"/>
-                            <constraint firstItem="3HM-Uf-pHc" firstAttribute="leading" secondItem="Qj0-xI-pUn" secondAttribute="trailing" id="pOa-jf-jv7"/>
-                            <constraint firstItem="7fY-b7-cEv" firstAttribute="top" secondItem="EYG-gy-uaF" secondAttribute="top" id="qUo-iT-MpD"/>
-                            <constraint firstItem="CKl-nv-Igj" firstAttribute="top" secondItem="EYG-gy-uaF" secondAttribute="top" id="ssq-WO-L5V"/>
-                            <constraint firstItem="Qj0-xI-pUn" firstAttribute="top" secondItem="EYG-gy-uaF" secondAttribute="top" id="u2o-t7-46e"/>
-                            <constraint firstItem="eff-Fa-GOc" firstAttribute="leading" secondItem="EYG-gy-uaF" secondAttribute="leading" id="umb-MX-UXF"/>
-                            <constraint firstItem="3HM-Uf-pHc" firstAttribute="height" secondItem="EYG-gy-uaF" secondAttribute="height" id="xG8-nF-WAh"/>
-                        </constraints>
-                    </scrollView>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="HPC-9h-7WD">
+                        <rect key="frame" x="3" y="34" width="961" height="114.5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6jO-MW-yC5">
+                            <size key="itemSize" width="100" height="70"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                    </collectionView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="EYG-gy-uaF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Eu2-Pj-Eso"/>
-                    <constraint firstAttribute="trailing" secondItem="EYG-gy-uaF" secondAttribute="trailing" id="U6V-ka-xPr"/>
+                    <constraint firstAttribute="trailing" secondItem="HPC-9h-7WD" secondAttribute="trailing" constant="-400" id="A4a-2o-BYx"/>
+                    <constraint firstItem="HPC-9h-7WD" firstAttribute="top" secondItem="6y0-uD-byi" secondAttribute="bottom" constant="1" id="AGG-5d-JHj"/>
+                    <constraint firstAttribute="bottom" secondItem="HPC-9h-7WD" secondAttribute="bottom" id="GEm-e1-LUy"/>
                     <constraint firstItem="6y0-uD-byi" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="3" id="X2h-YM-XMC"/>
                     <constraint firstAttribute="trailing" secondItem="6y0-uD-byi" secondAttribute="trailing" constant="3" id="ZNd-Ic-G7e"/>
-                    <constraint firstItem="EYG-gy-uaF" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" id="ZyP-36-mHb"/>
-                    <constraint firstItem="EYG-gy-uaF" firstAttribute="top" secondItem="6y0-uD-byi" secondAttribute="bottom" constant="3" id="d8W-79-gcy"/>
                     <constraint firstItem="6y0-uD-byi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="3" id="gBf-o8-hPv"/>
-                    <constraint firstAttribute="bottom" secondItem="EYG-gy-uaF" secondAttribute="bottom" id="lYS-ME-jvg"/>
+                    <constraint firstItem="HPC-9h-7WD" firstAttribute="leading" secondItem="6y0-uD-byi" secondAttribute="leading" id="pJT-iX-5lv"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <connections>
+                <outlet property="giftsCollectionView" destination="HPC-9h-7WD" id="kgQ-Ro-Fsf"/>
                 <outlet property="giftsCountButton" destination="6y0-uD-byi" id="bQC-Sq-EJ5"/>
             </connections>
-            <point key="canvasLocation" x="289" y="96.5"/>
+            <point key="canvasLocation" x="238.5" y="111.5"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="gift baby" width="200" height="150"/>
-        <image name="gift boy" width="200" height="150"/>
-        <image name="gift cat" width="128" height="128"/>
-        <image name="gift dog" width="200" height="150"/>
-    </resources>
 </document>
